# base

./: CMakeLists.txt  README.md  encoding.h  encodingcpp.cpp  file_system.cpp  file_system.h  property_tree.cpp  property_tree.h  uuid.cpp  uuid.h
src/: CMakeLists.txt  encoding.h  encodingcpp.cpp  file_system.cpp  file_system.h  uuid.cpp  uuid.h
src/file/: CMakeLists.txt  math.cpp  math.h
